[workspace]
members = [
    "crates/tunnel-agent",
    "crates/tunnel-cli",
    "crates/tunnel-control",
    "crates/tunnel-gateway",
    "crates/tunnel-shared",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
boringtun = "0.7.1"
clap = { version = "4.5.51", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tun = "0.7.13"
tunnel-shared = { path = "crates/tunnel-shared" }
