[package]
name = "tunnel-agent"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
boringtun.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tun.workspace = true
tunnel-shared.workspace = true
