[package]
name = "tunnel-cli"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
boringtun.workspace = true
clap.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tunnel-shared.workspace = true
